--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:28:35 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:29:18 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -182,10 +182,10 @@ Not started</td>
 Not started</td>
       <td>Will Zalatoris -2
 -1 thru 3</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +2
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout">Xander Schauffele(W) +2
 E thru 3</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -199,9 +199,9 @@ E thru 3</td>
       <td>Will Zalatoris -2
 -1 thru 3</td>
       <td class="greyout leftborder">Jon Rahm(W) E
--2 thru 3</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
+-2 thru 4</td>
+      <td class="greyout">Viktor Hovland +1
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
@@ -214,8 +214,8 @@ Not started</td>
 Not started</td>
       <td>Tyrrell Hatton -1
 -1 thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
-+2 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +1
++1 thru 3</td>
       <td class="greyout">Sam Burns +5
 +2 thru 5</td>
     </tr>
@@ -247,7 +247,7 @@ Not started</td>
       <td>Webb Simpson -1
 E thru 6</td>
       <td class="greyout leftborder">Jon Rahm(W) E
--2 thru 3</td>
+-2 thru 4</td>
       <td class="greyout">Xander Schauffele +2
 E thru 3</td>
     </tr>
@@ -261,7 +261,7 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 3</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 2</td>
       <td class="greyout">Brooks Koepka +2
@@ -325,7 +325,7 @@ Not started</td>
       <td>Tiger Woods -1
 Not started</td>
       <td>Jon Rahm(W) E
--2 thru 3</td>
+-2 thru 4</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 3</td>
       <td class="greyout">Sam Burns +5
@@ -341,7 +341,7 @@ Not started</td>
       <td>Will Zalatoris -2
 -1 thru 3</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 2</td>
       <td class="greyout">Xander Schauffele +2
@@ -357,9 +357,9 @@ Not started</td>
       <td>Patrick Cantlay(W) -2
 E thru 3</td>
       <td>Jon Rahm E
--2 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 2</td>
+-2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 3</td>
       <td class="greyout">Sam Burns +5
 +2 thru 5</td>
     </tr>
@@ -372,10 +372,10 @@ Not started</td>
 Not started</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
-      <td>Shane Lowry +1
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout leftborder">Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 2</td>
       <td class="greyout">Brooks Koepka +2
 -1 thru 2</td>
     </tr>
@@ -391,7 +391,7 @@ E thru 3</td>
       <td>Rory McIlroy E
 -1 thru 2</td>
       <td class="greyout leftborder">Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td class="greyout">Robert MacIntyre +2
 +1 thru 10</td>
     </tr>
@@ -453,11 +453,11 @@ Not started</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jon Rahm E
--2 thru 3</td>
-      <td class="greyout leftborder">Shane Lowry +1
+-2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout">Shane Lowry +1
 Not started</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -467,7 +467,7 @@ Not started</td>
       <td>Corey Conners -3
 -1 thru 8</td>
       <td>Jon Rahm(W) E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Talor Gooch E
 Not started</td>
       <td class="greyout leftborder">Hideki Matsuyama E
@@ -485,11 +485,11 @@ E thru 3</td>
       <td>Rory McIlroy(W) E
 -1 thru 2</td>
       <td>Jon Rahm E
--2 thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+-2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout">Jordan Spieth +1
 -1 thru 2</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -515,7 +515,7 @@ Not started</td>
       <td>Joaquin Niemann -3
 Not started</td>
       <td>Jon Rahm(W) E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Brooks Koepka +2
 -1 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele +2
@@ -534,10 +534,26 @@ E thru 3</td>
 -1 thru 2</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td class="greyout leftborder">Xander Schauffele(W) +2
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout">Xander Schauffele(W) +2
 E thru 3</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -581,7 +597,7 @@ Not started</td>
       <td>Rory McIlroy E
 -1 thru 2</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -595,13 +611,13 @@ Not started</td>
       <td>Bubba Watson -1
 -2 thru 7</td>
       <td>Jon Rahm(W) E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Rory McIlroy E
 -1 thru 2</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout">Jordan Spieth +1
 -1 thru 2</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -611,11 +627,11 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Jordan Spieth(W) +1
 -1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 3</td>
       <td class="greyout">Brooks Koepka +2
 -1 thru 2</td>
     </tr>
@@ -636,6 +652,22 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">-4</td>
       <td>Patrick Cantlay -2
@@ -645,9 +677,9 @@ E thru 3</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
       <td>Jon Rahm E
--2 thru 3</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +2
-+2 thru 2</td>
+-2 thru 4</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +1
++1 thru 3</td>
       <td class="greyout">Xander Schauffele +2
 E thru 3</td>
     </tr>
@@ -661,27 +693,11 @@ Not started</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 2</td>
       <td class="greyout">Robert MacIntyre +2
 +1 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -716,6 +732,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Baggy Pants</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -4
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Neville Spillman</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -3
@@ -723,7 +755,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Jordan Spieth(W) +1
 -1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka +2
@@ -732,20 +764,20 @@ E thru 3</td>
 +2 thru 5</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -3
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-4</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
+      <td>Joaquin Niemann -3
 Not started</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td>Shane Lowry(W) +1
 Not started</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout leftborder">Brian Harman +2
+Not started</td>
+      <td class="greyout">Sam Burns +5
++2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -758,42 +790,10 @@ Not started</td>
 -1 thru 2</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +1
++1 thru 3</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -4
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners -3
--1 thru 8</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Shane Lowry(W) +1
-Not started</td>
-      <td>Brian Harman +2
-Not started</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -803,7 +803,7 @@ E thru 3</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Jon Rahm(W) E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +1
@@ -821,11 +821,27 @@ E thru 3</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 2</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-2</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Daniel Berger -1
+Not started</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -849,7 +865,7 @@ Not started</td>
       <td>Corey Conners -3
 -1 thru 8</td>
       <td>Jon Rahm(W) E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Rory McIlroy E
 -1 thru 2</td>
       <td>Jordan Spieth +1
@@ -860,20 +876,36 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
+E thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Daniel Berger -1
+      <td>Scottie Scheffler -3
 Not started</td>
-      <td>Jon Rahm E
--2 thru 3</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Xander Schauffele +2
 E thru 3</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -881,7 +913,7 @@ Not started</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
       <td>Jon Rahm(W) E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jordan Spieth +1
@@ -890,22 +922,6 @@ Not started</td>
 -1 thru 2</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 3</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
-E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -924,20 +940,52 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">0</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 3</td>
+      <td>Will Zalatoris -2
+-1 thru 3</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
       <td>Jordan Spieth +1
 -1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Sam Burns +5
++2 thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">0</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Collin Morikawa(W) E
+-1 thru 4</td>
+      <td>Rory McIlroy E
+-1 thru 2</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +6
++3 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">0</td>
+      <td>Will Zalatoris -2
+-1 thru 3</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Jordan Spieth +1
+-1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
-E thru 3</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -947,29 +995,13 @@ E thru 3</td>
       <td>Rory McIlroy E
 -1 thru 2</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
       <td>Brooks Koepka +2
 -1 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele +2
 E thru 3</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">1</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Jon Rahm E
--2 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -988,36 +1020,20 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">1</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Collin Morikawa(W) E
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">2</td>
+      <td>Collin Morikawa E
 -1 thru 4</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +6
-+3 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">1</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Jon Rahm(W) E
--2 thru 3</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Viktor Hovland(W) +1
++1 thru 3</td>
       <td>Jordan Spieth +1
 -1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout">Patrick Reed +2
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -1036,30 +1052,14 @@ Not started</td>
 +2 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">3</td>
-      <td>Collin Morikawa E
--1 thru 4</td>
-      <td>Jon Rahm E
--2 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Patrick Reed +2
-E thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
       <td>Jordan Spieth +1
 -1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
       <td>Brooks Koepka +2
 -1 thru 2</td>
       <td class="greyout leftborder">Xander Schauffele +2
@@ -1069,13 +1069,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Jon Rahm E
--2 thru 3</td>
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
       <td>Jordan Spieth +1
 -1 thru 2</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
       <td>Xander Schauffele +2
 E thru 3</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
@@ -1085,11 +1085,11 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Jon Rahm(W) E
--2 thru 3</td>
-      <td>Viktor Hovland +2
-+2 thru 2</td>
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
       <td>Brooks Koepka +2
 -1 thru 2</td>
       <td>Xander Schauffele +2
