--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:29:18 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:30:01 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -262,10 +262,10 @@ Not started</td>
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
-      <td class="greyout">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout">Jordan Spieth +2
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -278,9 +278,9 @@ Not started</td>
 -1 thru 3</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Jordan Spieth +2
 E thru 3</td>
     </tr>
     <tr>
@@ -342,9 +342,9 @@ Not started</td>
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Jordan Spieth +2
 E thru 3</td>
     </tr>
     <tr>
@@ -488,8 +488,8 @@ E thru 3</td>
 -2 thru 4</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 3</td>
-      <td class="greyout">Jordan Spieth +1
--1 thru 2</td>
+      <td class="greyout">Jordan Spieth +2
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -538,22 +538,6 @@ E thru 3</td>
 +1 thru 3</td>
       <td class="greyout">Xander Schauffele(W) +2
 E thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 8</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -616,8 +600,8 @@ Not started</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Viktor Hovland +1
 +1 thru 3</td>
-      <td class="greyout">Jordan Spieth +1
--1 thru 2</td>
+      <td class="greyout">Jordan Spieth +2
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -628,10 +612,10 @@ Not started</td>
 E thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Jordan Spieth(W) +1
--1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +1
+      <td>Viktor Hovland +1
 +1 thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +2
+E thru 3</td>
       <td class="greyout">Brooks Koepka +2
 -1 thru 2</td>
     </tr>
@@ -694,10 +678,26 @@ Not started</td>
 -1 thru 4</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout">Robert MacIntyre +2
+      <td class="greyout leftborder">Robert MacIntyre +2
 +1 thru 10</td>
+      <td class="greyout">Jordan Spieth +2
+E thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -710,25 +710,9 @@ Not started</td>
 +1 thru 2</td>
       <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
       <td class="greyout">Louis Oosthuizen +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-4</td>
-      <td>Corey Conners -3
--1 thru 8</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Shane Lowry +1
-Not started</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
     <tr>
@@ -746,22 +730,6 @@ Not started</td>
 -1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Jordan Spieth(W) +1
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -796,6 +764,38 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Shane Lowry +1
+Not started</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Jordan Spieth(W) +2
+E thru 3</td>
+      <td class="greyout leftborder">Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout">Sam Burns +5
++2 thru 5</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-3</td>
       <td>Patrick Cantlay -2
@@ -806,10 +806,10 @@ Not started</td>
 -2 thru 4</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
-      <td class="greyout">Brooks Koepka +2
--1 thru 2</td>
+      <td class="greyout">Jordan Spieth +2
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
@@ -822,8 +822,8 @@ E thru 3</td>
 Not started</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
     </tr>
@@ -844,38 +844,6 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td>Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">-2</td>
-      <td>Corey Conners -3
--1 thru 8</td>
-      <td>Jon Rahm(W) E
--2 thru 4</td>
-      <td>Rory McIlroy E
--1 thru 2</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler -3
@@ -892,34 +860,34 @@ Not started</td>
 E thru 3</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">Philip Dale</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -3
 Not started</td>
-      <td>Jon Rahm(W) E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Xander Schauffele +2
-E thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">-1</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
       <td>Jon Rahm(W) E
 -2 thru 4</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Jordan Spieth +1
+      <td>Rory McIlroy E
 -1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
@@ -940,20 +908,36 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">0</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Jon Rahm E
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) E
 -2 thru 4</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Jordan Spieth +1
+      <td>Brooks Koepka +2
 -1 thru 2</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
+      <td class="greyout leftborder">Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout">Jordan Spieth +2
+E thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -2
+E thru 3</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Hideki Matsuyama E
 Not started</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 5</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
@@ -972,22 +956,6 @@ Not started</td>
 +3 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">0</td>
-      <td>Will Zalatoris -2
--1 thru 3</td>
-      <td>Jon Rahm(W) E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay(W) -2
@@ -1004,36 +972,52 @@ E thru 3</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">1</td>
+      <td>Will Zalatoris -2
+-1 thru 3</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Sam Burns +5
++2 thru 5</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">1</td>
+      <td>Will Zalatoris -2
+-1 thru 3</td>
+      <td>Jon Rahm(W) E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">NewCastle Magpies</td>
+      <td class="bigbold">2</td>
       <td>Patrick Cantlay -2
 E thru 3</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
       <td>Brooks Koepka +2
 -1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth +2
 E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">2</td>
-      <td>Collin Morikawa E
--1 thru 4</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Viktor Hovland(W) +1
-+1 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Brooks Koepka +2
--1 thru 2</td>
-      <td class="greyout">Patrick Reed +2
-E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -1052,36 +1036,20 @@ Not started</td>
 +2 thru 9</td>
     </tr>
     <tr>
-      <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">3</td>
+      <td>Collin Morikawa E
+-1 thru 4</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Viktor Hovland +1
+      <td>Viktor Hovland(W) +1
 +1 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
       <td>Brooks Koepka +2
 -1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Patrick Reed +2
+E thru 7</td>
+      <td class="greyout">Jordan Spieth +2
 E thru 3</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">4</td>
-      <td>Jon Rahm E
--2 thru 4</td>
-      <td>Viktor Hovland +1
-+1 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td>Xander Schauffele +2
-E thru 3</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -1097,6 +1065,38 @@ E thru 3</td>
       <td class="greyout leftborder">Louis Oosthuizen +4
 Not started</td>
       <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Yellow in Augusta</td>
+      <td class="bigbold">5</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Brooks Koepka +2
+-1 thru 2</td>
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">5</td>
+      <td>Jon Rahm E
+-2 thru 4</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td>Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +4
 Not started</td>
     </tr>
   </tbody>
