--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:29:18 AM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 11:30:01 AM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,16 +141,16 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-9</td>
+      <td class="bigbold">-8</td>
       <td>Cameron Smith -4
 Not started</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -3
 -1 thru 8</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth +2
 E thru 3</td>
       <td class="greyout">Sam Burns +5
 +2 thru 5</td>
@@ -260,28 +260,12 @@ Not started</td>
 E thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Jordan Spieth(W) +1
--1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +1
-+1 thru 3</td>
-      <td class="greyout">Brooks Koepka +2
--1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-5</td>
-      <td>Cameron Smith(W) -4
-Not started</td>
-      <td>Corey Conners -3
--1 thru 8</td>
       <td>Viktor Hovland +1
 +1 thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Xander Schauffele +2
+      <td class="greyout leftborder">Jordan Spieth(W) +2
 E thru 3</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
+      <td class="greyout">Brooks Koepka +2
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -292,12 +276,12 @@ Not started</td>
 -1 thru 3</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
-      <td class="greyout leftborder">Shane Lowry +1
+      <td>Shane Lowry +1
 Not started</td>
-      <td class="greyout">Brooks Koepka +2
+      <td class="greyout leftborder">Brooks Koepka +2
 -1 thru 2</td>
+      <td class="greyout">Jordan Spieth +2
+E thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -326,10 +310,26 @@ Not started</td>
 -1 thru 4</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
       <td class="greyout">Robert MacIntyre +2
 +1 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith(W) -4
+Not started</td>
+      <td>Corey Conners -3
+-1 thru 8</td>
+      <td>Viktor Hovland +1
++1 thru 3</td>
+      <td>Xander Schauffele +2
+E thru 3</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -342,8 +342,8 @@ Not started</td>
 -2 thru 4</td>
       <td>Collin Morikawa E
 -1 thru 4</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +2
+E thru 3</td>
       <td class="greyout">Brooks Koepka +2
 -1 thru 2</td>
     </tr>
@@ -365,14 +365,14 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Corey Conners -3
 -1 thru 8</td>
       <td>Jon Rahm E
 -2 thru 4</td>
-      <td>Jordan Spieth +1
--1 thru 2</td>
       <td>Xander Schauffele +2
+E thru 3</td>
+      <td>Jordan Spieth +2
 E thru 3</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 Not started</td>
